[package]
name = "leapoh"
version = "0.1.0"
edition = "2021"
description = "A calm CLI creature that compresses your morning into a glance."

[[bin]]
name = "leapoh"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
